
wxMSW:

- Separators are now correctly shown in the toolbars under Windows XP.
- Fixed multiline tooltips handling.
- Fixed wxSlider::GetSelEnd() (Atilim Cetin).
- Fixed accelerators of menu items added to already attached submenus.
- Position of wxEVT_MOUSEWHEEL events is now in client, not screen, coordinates.

wxWinCE:

- RTTI and exceptions enabled by default.

wxOS2

- Adjustments for building with Open Watcom C++.

wxUniv:

- Window creation now honours wxVSCROLL.
- Standalone scrollbars generate events of correct type (Jochen Roemmler)

2.6.1
-----

All:

- Added wxLaunchDefaultBrowser.
- Added wxPLURAL() macro in addition to _() (Jonas Rydberg)

All (GUI):

- Fixed potential infinite loop when adjusting wxScrolledWindow scrollbars.
- Radio in menus do not send menu event for selections of already selected item.
- Fixed wrong positioning of marks and enumerations in lists of wxHTML.
- wxImage::Rotate90 respects alpha channel.
- Added wxEVT_SCROLL_CHANGED as synonym for wxEVT_SCROLL_ENDSCROLL.
- Replaced artwork for some cursors, icons and toolbar buttons.
- Fixed sizing problem in generic wxCalendarCtrl for short day abbreviations.
- Fixed wxWindow::DoGetBestSize to keep original best size.
- PNM now supports ASCII and raw grey formats.
- wxGrid focus and edit key improvements.

wxMSW:

- Fixed erroneous selection of content in wxComboBox when within a wxStaticBox
  (checking for selection caused by WM_STYLECHANGED).
- Added deferred positioning to wxRadioBox, wxSlider and wxSpinCtrl and thereby
  eliminated some refresh glitches when resizing.
- Eliminated further refresh glitches caused by wxRadioBox (to nearby controls)
  by refreshing parent when the radio box moves.
- Added ability set the system option "msw.staticbox.optimized-paint" to 0 to
  allow a panel to paint graphics around controls within a static box.
- Refresh exposed areas when resizing, using WM_WINDOWPOSCHANGED.
- Worked around an apparent bug in deferred window positioning (moving a